--- a/Konoplev2018Project16/report.tex
+++ b/Konoplev2018Project16/report.tex
@@ -5,9 +5,9 @@
     [Оценка оптимального объема выборки для исследований в медицине] % Краткое название; не нужно, если полное название влезает в~колонтитул
     {Оценка оптимального объема выборки для исследований в медицине}
 \author
-    [Коноплёв~М.\,С. Катруца$^1$~А.\,М.  Стрижов$^2$~В.\,В.] % список авторов для колонтитула; не нужен, если основной список влезает в колонтитул
-    {Коноплёв~М.\,С. Катруца$^1$~А.\,М.  Стрижов$^2$~В.\,В.} % основной список авторов, выводимый в оглавление
-    [Коноплёв~М.\,С. Катруца$^1$~А.\,М.  Стрижов$^2$~В.\,В.] % список авторов, выводимый в заголовок; не нужен, если он не отличается от основного
+    [Коноплёв~М.\,Д. Катруца$^1$~А.\,М.  Стрижов$^2$~В.\,В.] % список авторов для колонтитула; не нужен, если основной список влезает в колонтитул
+    {Коноплёв~М.\,Д. Катруца$^1$~А.\,М.  Стрижов$^2$~В.\,В.} % основной список авторов, выводимый в оглавление
+    [Коноплёв~М.\,Д. Катруца$^1$~А.\,М.  Стрижов$^2$~В.\,В.] % список авторов, выводимый в заголовок; не нужен, если он не отличается от основного
 \thanks
     {Работа выполнена при финансовой поддержке РФФИ, проект \No\,00-00-00000.
    Научный руководитель:  Стрижов~В.\,В.
