--- a/report/Kharatyan2018Project16/literature.bib
+++ b/report/Kharatyan2018Project16/literature.bib
@@ -87,3 +87,45 @@
 	year={1970},
 	publisher={sage publications Sage CA: Los Angeles, CA}
 }
+
+
+@article{mccray2017sample,
+	title={Sample size re-estimation in paired comparative diagnostic accuracy studies with a binary response},
+	author={McCray, Gareth PJ and Titman, Andrew C and Ghaneh, Paula and Lancaster, Gillian A},
+	journal={BMC medical research methodology},
+	volume={17},
+	number={1},
+	pages={102},
+	year={2017},
+	publisher={BioMed Central}
+}
+
+@article{friedman2000additive,
+	title={Additive logistic regression: a statistical view of boosting (with discussion and a rejoinder by the authors)},
+	author={Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert and others},
+	journal={The annals of statistics},
+	volume={28},
+	number={2},
+	pages={337--407},
+	year={2000},
+	publisher={Institute of Mathematical Statistics}
+}
+
+@article{demidenko2007sample,
+	title={Sample size determination for logistic regression revisited},
+	author={Demidenko, Eugene},
+	journal={Statistics in medicine},
+	volume={26},
+	number={18},
+	pages={3385--3397},
+	year={2007},
+	publisher={Wiley Online Library}
+}
+
+@book{hosmer2013applied,
+	title={Applied logistic regression},
+	author={Hosmer Jr, David W and Lemeshow, Stanley and Sturdivant, Rodney X},
+	volume={398},
+	year={2013},
+	publisher={John Wiley \& Sons}
+}
