--- a/report/Kharatyan2018Project16/report.tex
+++ b/report/Kharatyan2018Project16/report.tex
@@ -22,7 +22,7 @@
 
 \bigskip
 \noindent
-\textbf{Ключевые слова}: \emph {определение оптимального объёма выборки, логистическая регрессия, кросс-валидация}.
+\textbf{Ключевые слова}: \emph {определение оптимального объёма выборки, логистическая регрессия, расстояние Кульбака-Лейблера}.
 
 }
 
