--- a/Murlatov2018Project16/Murlatov2018Title.bib
+++ b/Murlatov2018Project16/Murlatov2018Title.bib
@@ -1,4 +1,5 @@
 
+
 @Article{journals/cssc/Bush15,
   title =	"Sample Size Determination for Logistic Regression: A
 		 Simulation Study",
@@ -34,17 +35,82 @@ From DBLP (2011):
 }
 
 
-@Article{journals/jcam/MotrenkoSW14,
-  title =	"Sample size determination for logistic regression",
-  author =	"Anastasiya Motrenko and Vadim V. Strijov and
-		 Gerhard-Wilhelm Weber",
-  journal =	"J. Computational Applied Mathematics",
-  year = 	"2014",
-  volume =	"255",
-  bibdate =	"2018-06-15",
-  bibsource =	"DBLP,
-		 http://dblp.uni-trier.de/https://doi.org/10.1016/j.cam.2013.06.031;
-		 DBLP,
-		 http://dblp.uni-trier.de/db/journals/jcam/jcam255.html#MotrenkoSW14",
-  pages =	"743--752",
+
+@Article{SSD,
+  Title                    = {Ralph B. Dell, Steve Holleran, and Rajasekhar Ramakrishnan},
+  Author                   = {Sample Size Determination},
+  Journal                  = {Ilar Journal},
+  Year                     = {2002},
+  Timestamp                = {2018.02.24}
+}
+@Article{Figueroa2012,
+  Title                    = {Predicting sample size required for classification performance},
+  Author                   = {Rosa L Figueroa and Qing Zeng-Treitler and Sasikiran Kandula and Long H Ngo},
+  Journal                  = {{BMC} Medical Informatics and Decision Making},
+  Year                     = {2012},
+
+  Month                    = {feb},
+  Number                   = {1},
+  Volume                   = {12},
+
+  Doi                      = {10.1186/1472-6947-12-8},
+  Publisher                = {Springer Nature},
+ 
+}
+
+@Conference{SVMbest,
+  Title                    = {Learning From Little: Comparison of Classifiers given Little Training},
+  Author                   = {Forman George, Ira Cohen},
+  Booktitle                = {ECML/PKDD},
+  Year                     = {2004},
+  Timestamp                = {2018.02.24}
+}
+
+@Article{Criterion,
+  Title                    = {BAYESIAN AND MIXED BAYESIAN/LIKELIHOOD
+CRITERIA FOR SAMPLE SIZE DETERMINATION},
+  Author                   = {LAWRENCE JOSEPH and ROXANE DU BERGER and PATRICK BE LISLE},
+  Journal                  = {STATISTICS IN MEDICINE},
+  Year                     = {1997},
+  Timestamp                = {2018.02.24}
+}
+
+@Article{smalldatasetproblem2,
+  Title                    = {Meaningful Analysis of Small Data Sets: A Clinician’s Guide},
+  Author                   = {Justin Collins, BS; Jordan Brown, BS; Christine Schammel, PhD; Kevin Hutson, PhD; and W. Jeffery
+Edenfield, MD},
+  Journal                  = {Greenville health system},
+  Year                     = {2016},
+  Timestamp                = {2018.02.24}
+}
+
+@Article{MOTRENKO2014743,
+  Title                    = {Sample size determination for logistic regression},
+  Author                   = {Anastasiya Motrenko and Vadim Strijov and Gerhard-Wilhelm Weber},
+  Journal                  = {Journal of Computational and Applied Mathematics},
+  Year                     = {2014},
+  Pages                    = {743 - 752},
+  Volume                   = {255},
+
+  Doi                      = {https://doi.org/10.1016/j.cam.2013.06.031},
+  ISSN                     = {0377-0427},
+  Keywords                 = {Logistic regression, Sample size, Feature selection, Bayesian inference, Kullback–Leibler divergence},
+  Timestamp                = {2018.02.21},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S0377042713003294}
+}
+
+@Article{Mukherjee2003,
+  Title                    = {Estimating Dataset Size Requirements for Classifying {DNA} Microarray Data},
+  Author                   = {Sayan Mukherjee and Pablo Tamayo and Simon Rogers and Ryan Rifkin and Anna Engle and Colin Campbell and Todd R. Golub and Jill P. Mesirov},
+  Journal                  = {Journal of Computational Biology},
+  Year                     = {2003},
+
+  Month                    = {apr},
+  Number                   = {2},
+  Pages                    = {119--142},
+  Volume                   = {10},
+
+  Doi                      = {10.1089/106652703321825928},
+  Publisher                = {Mary Ann Liebert Inc},
+  
 }
