--- a/report/Kharatyan2018Project16/report.tex
+++ b/report/Kharatyan2018Project16/report.tex
@@ -1,7 +1,6 @@
 \documentclass[12pt,twoside]{article}
 \usepackage{jmlda}
 
-
 \begin{document}
 \title
     {Оценка оптимального объёма выборки для задач классификации}
@@ -33,12 +32,12 @@
 
 \section{Введение}
 
-Работа посвящена оценке оптимального объёма исследуемой выборки применительно к проблемам медицинской диагностики. Рассматриваются биомедицинские данные пациентов как выборка. Каждый пациент набором признаков. 
-Получение данных о пациентах требует немалых средст. В случае, если количество данных избыточно, то их измерения приносят крайне неоправданные расходы. В связи с этим поднимается вопрос оптимального количества измерений.
+Работа посвящена оценке оптимального объёма исследуемой выборки применительно к проблемам медицинской диагностики. Рассматриваются биомедицинские данные пациентов как выборка. Каждый пациент обладает набором признаков. 
+Получение данных о пациентах требует немалых средств. В случае, если количество данных избыточно, то их измерения приносят крайне неоправданные расходы. В связи с этим поднимается вопрос оптимального количества измерений.
 Ввиду дороговизны анализов всех признаков оценка измерений должна быть точной. 
 
 Для нахождения оценки используется модель логистической регрессии\cite{hosmer2013applied}. Стандартной практикой является использование статистических методов\cite{demidenko2007sample} для оценивания объёма данных при помощи логистической регрессии. Введём понятие устойчивости модели в отношении объёма выборки. Будем называть модель устойчивой, если при изменении малом изменении объёма параметры модели меняются незначительно.
-Если размер выборки крайне мал и недостаточен, то параметры модели меняются скачкообразно при увеличении объёма.Соответственно, увеличивая объём выборки, мы повышаем устойчивость модели. В качестве показателя устойчивости
+Если размер выборки крайне мал и недостаточен, то параметры модели меняются скачкообразно при увеличении объёма. Соответственно, увеличивая объём выборки, мы повышаем устойчивость модели. В качестве показателя устойчивости
 для моделей будем использовать расстояние Кульбака-Лейблера. Для того чтобы показать отличие моделей в устойчивости будем использовать разность усредненных значений расстояний К-Л, вычисленных на разных выборках одного и того же объёма. Если объекты порождены одинаковым распределением, то при росте объёма выборок разность расстояний К-Л между моделями падает. Достигнув необходимого показателя устойчивости, можно легко вычислить оптимальный размер данных.
 
 Для вычислительного экперимента используются реальные данные 569 пациентов с 30 признаками и метками об опухоли молочной железы: доброкачественная или злокачественная. Как описано выше, будем обучать модели на разных подвыборках и после достижения необходимого уровня устойчивости получим оптимальный объём данных.
@@ -71,7 +70,7 @@ E ( \boldsymbol { \omega } ) = - \ln p ( \mathbf { y } | \boldsymbol { \omega } 
 Тогда алгоритм классификации определяется следующим образом:
 
 \begin{equation}\label{eq:fvth}
-a \left( \mathbf { x } , c _ { 0 } \right) = \operatorname { sign } \left( f ( \mathbf { x } , \boldsymbol { \omega } ) - c _ { 0 } \right)
+a \left( \mathbf { x } , c _ { 0 } \right) = { sign } \left( f ( \mathbf { x } , \mathbf { \omega } ) - c _ { 0 } \right)
 \end{equation}
 
 где $c _ { 0 }$ - пороговое значение функции активации\cite{motrenko2014sample} .
@@ -80,10 +79,39 @@ a \left( \mathbf { x } , c _ { 0 } \right) = \operatorname { sign } \left( f ( \
 Допустим, что задано $m$ объектов выборки $D$. Количество этих объектов недостаточно для обучения устойчивой модели логистической регрессии. Необходимо, имея $m$ объектов, найти такое число $m^ { * } $, что показатель устойчивости модели при увеличении числа $m^ { * } $ меняется незначительно. Задача нахождения данного числа объектов представляется следующим образом:
 
 \begin{equation}\label{eq:sxth}
-m ^ { * } = \min m \in \mathbb { N } \; \;  \forall  k \in \mathbb { N } \rightarrow \rho ( \mathrm { p } ( \boldsymbol { w } | m ^ {*} ) , \mathrm { p } ( \boldsymbol { w } | m ^ {*} + k ) ) < \varepsilon
+m ^ { * } = \min m \in \mathbb { N } \; \;  \forall  k \in \mathbb { N } \rightarrow \rho ( \mathrm { p } ( \boldsymbol { \omega } | m ^ {*} ) , \mathrm { p } ( \boldsymbol { \omega } | m ^ {*} + k ) ) < \varepsilon
 \end{equation}
-где $\rho$ - некоторая функция расстояния между распределениями, $\varepsilon$ - заранее заданный порог устойчивости, $\mathrm { p } ( \boldsymbol { w } | m ^ {*} )$
+где $\rho$ - некоторая функция расстояния между распределениями, $\varepsilon$ - заранее заданный порог устойчивости, $\mathrm { p } ( \boldsymbol { \omega } | m ^ {*} )$
 - распределение весов модели, обученной на выборке размером $m^{*}$.
+
+\section{Вычислительный эксперимент}
+В качестве функции расстояния между распределениями будем использовать дивергенцию Кульбака-Лейблера. Предполагается, что веса модели $\omega$ порождаются многомерным нормальным распределением. Учитывая это, можно легко посчитать расстояние между двумя распределениями параметров со средними значениями $\boldsymbol { \omega } _ { 1 }$, $\boldsymbol { \omega } _ { 2 }$ и ковариационными матрицами $A _ { 1 }$, $A _ { 2 }$ :
+
+$$\rho (\mathsf{p}(\vec{\omega}|m), \mathsf{p}(\vec{\omega}|m+k)) = KL(\mathcal{N}(\vec{\hat \omega}_1, \boldsymbol{A}_1)||\mathcal{N}(\vec{\hat \omega}_2, \boldsymbol{A}_2)) =$$
+$$\frac{1}{2}\left( tr(\boldsymbol{A}_2^{-1} \boldsymbol{A}_1) + (\vec{\hat \omega}_1 - \vec{\hat \omega}_2)^T \boldsymbol{A}_2^{-1}(\vec{\hat \omega}_1 - \vec{\hat \omega}_2) - n + \ln\left(\frac{\det(\boldsymbol{A}_2)}{\det(\boldsymbol{A}_1)}\right) \right)$$
+
+В эксперименте применяются данные о 569 пациентах с метками о произрастании опухоли молочной железы. Стоит отметить, что изначально мы рассматриваем задачи медицинской диагностики, где данных может быть намного меньше. Однако в данном случае мы воспользуемся большим объёмом, поскольку нам требуется точнее оценить среднее качество классификации, достигаемое на фиксированной длине выборке. Для этого мы будем много раз обучать модель регрессии, выбирая случайным образом определенное количество объектов, начиная с 10 и заканчивая 100. Для каждой длины выборки будем отмечать точность классификации, полученную на других случайных 100 объектах из 569, логистическую функцию потерь и расстояние Кульбака-Лейблера. Результаты эксперимента и графики зависимости от объёма выборки представлены ниже.
+
+\begin{figure}[h]
+	\subfloat[Точность классификации при разных объёмах]{\includegraphics[width=0.5\textwidth]{Accuracy.eps}}
+	\subfloat[Функция ошибки log-loss]{\includegraphics[width=0.5\textwidth]{Log-loss.eps}}\\
+	\label{fg:Acc}
+\end{figure}
+
+Нетрудно увидеть, что с увеличением объёма выборки качество классификации повышается, однако чем больше мы добавляем данных для обучения, тем слабее повышается качество.
+
+\begin{figure}[h]
+	\centering
+	\subfloat[Расстояние Кульбака-Лейблера.]{\includegraphics[width=0.5\textwidth]{K-L.eps}}
+	\label{fg:kl}
+\end{figure}
+
+Стоит внимательно посмотреть на график расстояния Кульбака-Лейблера. Из рисунка можно увидеть, что примерно после объёма ~40 метрика начинает меняться значительно слабее. Таким образом, мы получили оптимальный номер объектов для нашей выборки в модели логистической регрессии.
+В задачах классификации всегда можно повышать качество путём добавления новых данных для обучения. Всё зависит от того, какая точность нам нужна. 
+
+\section{Выводы}
+В работе описан алгоритм оценивания оптимального объёма выборки для исследований в медицине. В эксперименте были рассмотрены реальные данные, при помощи которых удалось выявить оптимальное количество элементов для обучения логистической регрессии(приблизительно 40 объектов)
+
 \bibliographystyle{jmlda-rus}
 \bibliography{literature}
 
