--- a/report/Kharatyan2018Project16/literature.bib
+++ b/report/Kharatyan2018Project16/literature.bib
@@ -61,3 +61,21 @@
 	year={2013},
 	publisher={John Wiley \& Sons}
 }
+
+@article{smpltr,
+	author = {Sug, Hyontai},
+	title = {An Effective Sampling Method for Decision Trees Considering Comprehensibility and Accuracy},
+	journal = {W. Trans. on Comp.},
+	issue_date = {April 2009},
+	volume = {8},
+	number = {4},
+	month = apr,
+	year = {2009},
+	issn = {1109-2750},
+	pages = {631--640},
+	numpages = {10},
+	acmid = {1558762},
+	publisher = {World Scientific and Engineering Academy and Society (WSEAS)},
+	address = {Stevens Point, Wisconsin, USA},
+	keywords = {decision trees, proper sample size determination},
+} 
