--- a/report/Kharatyan2018Project16/report.tex
+++ b/report/Kharatyan2018Project16/report.tex
@@ -98,7 +98,10 @@ $$\frac{1}{2}\left( tr(\boldsymbol{A}_2^{-1} \boldsymbol{A}_1) + (\vec{\hat \ome
 	\label{fg:Acc}
 \end{figure}
 
-Нетрудно увидеть, что с увеличением объёма выборки качество классификации повышается, однако чем больше мы добавляем данных для обучения, тем слабее повышается качество.
+Нетрудно увидеть, что с увеличением объёма выборки качество классификации повышается, однако при добавлении новых данных качество предсказани и ошибки изменяются медленнее. Например, на графике точности количества объектов порядка 20-25 хватает для достижения почти $93\%$ точности. При дальнейшем пополнении выборки, когда объём увеличивается в 5 раз, точность выше только на $3\%$. Ввиду такого факта следует, что не имеет смысла брать выборки очень большого мастштаба для решения реальных задач прогнозирования. В целом, обычно $95\%$ точности является очень хорошим результатом классификации пациентов в медицинской диагностике. Точность выше обычно требуется на data-science соревнованиях, где каждая доля процента крайне важна. Заметим, что в модели логистической регрессии используется стохастический градиентный спук, который чувствителен к параметрам модели. Чтобы процесс нt оказался парализованным и быстрее сходился за определенное число шагов, была произведена нормализация признаков. Из каждого признака вычитается среднее по признаку всех объектов выборки и делится на стандартное отклонение.
+
+Достижение полученных результатов точности на выборках малого объёма появляется не случайно. Этим обоснован выбор модели для нашего эксперимента. Логистическая регрессия очень хорошо работает при выборках небольшого объёма. Другие модели, как например, дерево решений, могут требовать в тысячи раз больше данных. Такой исход можно увидеть в работе \cite{smpltr}. Однако не всегда при помощи простой логистической регрессии удаётся добиться крайне завышенных результатов, как например $95\%$. Для этой цели уже следует использовать усовершенствованные методы классификации. В качестве примера таких методов можно привести многослойный перцептрон.
+  
 
 \begin{figure}[h]
 	\centering
