--- a/Evgin2018Project16/code.ipynb
+++ b/Evgin2018Project16/code.ipynb
@@ -1,392 +1,209 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rosenbock problem"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn import datasets\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC\n",
-    "import sklearn\n",
-    "import scipy.stats as stats\n",
-    "from sklearn.svm import LinearSVC\n",
-    "import scipy as sp\n",
-    "import matplotlib.pyplot as plt\n",
-    "import itertools\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from scipy.spatial.distance import mahalanobis\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn import preprocessing\n",
-    "from scipy.linalg import fractional_matrix_power\n",
-    "%matplotlib inline\n",
-    "import matplotlib\n",
-    "font = {'variant' : 'normal',\n",
-    "        'weight' : 'bold',\n",
-    "        'size'   : 15}\n",
+    "import tensorflow as tf\n",
+    "import math\n",
     "\n",
-    "matplotlib.rc('font', **font)"
+    "def rosenbrock(x, y, a, b):\n",
+    "    return (a - x)**2 + b*(y - x**2)**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def KL_div_norm(dist1,dist2):\n",
-    "    mean1 = np.mean(dist1, axis=0)\n",
-    "    cov1 = np.cov(dist1, rowvar=0)\n",
-    "    mean2 = np.mean(dist2, axis=0)\n",
-    "    cov2 = np.cov(dist2, rowvar=0)\n",
-    "    div = 0.5*(np.trace(np.dot(np.linalg.inv(cov2),cov1)) + np.dot(np.dot((mean2-mean1),np.linalg.inv(cov2)),(mean2-mean1)) - cov2.shape[0] + np.log(np.linalg.det(cov2)/np.linalg.det(cov1)))\n",
-    "    return div"
+    "data_points = np.array([[x, y, rosenbrock(x, y, 2.5, 2.5)]\n",
+    "                       for x in np.arange(-2, 2.1, 2) \n",
+    "                       for y in np.arange(-2, 2.1, 2)])\n",
+    "m = data_points.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_param_distr(X,y,n,count=50):\n",
-    "    l = X.shape[0]\n",
-    "    C = 1\n",
-    "    distr=[]\n",
-    "    losses = 0 \n",
-    "    clf0 = LogisticRegression(C=C, random_state=0)\n",
-    "    clf0.fit(X,y)\n",
-    "    for i in range(0,count):\n",
-    "        choice = np.random.choice(range(0,l), n)\n",
-    "        clf = LogisticRegression(C=C, random_state=0)\n",
-    "        while not((0 in y[choice])and(1 in y[choice])):\n",
-    "            choice = np.random.choice(range(0,l), n)\n",
-    "        clf.fit(X[choice],y[choice])\n",
-    "        coef = clf.coef_\n",
-    "        distr.append(coef[0])\n",
-    "        losses += sklearn.metrics.log_loss(y,clf.predict_proba(X))\n",
-    "    return np.asarray(distr), losses"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = open(\"/home/alea/2018-Project-16/Evgin2018Project16/Data.txt\")\n",
-    "g = open(\"/home/alea/2018-Project-16/Evgin2018Project16/heart.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_h = []\n",
-    "for line in g:\n",
-    "    data_h.append(list(map(float, line.replace(\";\", \" \").replace(\"\\n\", \"\").split())))\n",
-    "data_h = np.asarray(data_h)\n",
-    "data_h = data_h[:,[0,3,4,7,9,11,13]]\n",
-    "np.random.shuffle(data_h)\n",
-    "X_h = data_h[:,:-1]\n",
-    "X_h = preprocessing.scale(X_h[:,:-1])\n",
-    "y_h = data_h[:,-1] - np.ones(data_h[:,-1].shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "data_l = []\n",
-    "for line in f:\n",
-    "    data_l.append(list(map(float, line.replace(\",\",\" \").replace(\"\\n\",\"\").split())))\n",
-    "data_l = np.asarray(data_l)\n",
-    "np.random.shuffle(data_l)\n",
-    "X_l=data_l[:,:-1]\n",
-    "X_l = preprocessing.scale(X_l[:,:-1])\n",
-    "y_l=data_l[:,-1]-np.ones(data_l[:,-1].shape[0])\n",
-    "random_state = 0\n",
-    "X, X_t, y, y_t = train_test_split(X_h, y_h, test_size=0.2, random_state=random_state)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_h.shape"
+    "x = tf.placeholder(tf.float64, shape=[m, 2])\n",
+    "y = tf.placeholder(tf.float64, shape=[m])\n",
+    "p = tf.Variable([5., 5.], dtype=tf.float64)\n",
+    "y_hat = rosenbrock(x[:, 0], x[:, 1], p[0], p[1])\n",
+    "r = y - y_hat\n",
+    "loss = tf.reduce_mean(r**2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Counting and ploting accuracy"
+    "Test guess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3868.2291666666665\n"
+     ]
+    }
+   ],
    "source": [
-    "C = 1\n",
-    "start = 10\n",
-    "ratios = []\n",
-    "k = y_t.shape[0]\n",
-    "accuracy = []\n",
-    "for n in range(start, y.shape[0]):\n",
-    "    clf = LogisticRegression(C=C, random_state=random_state)\n",
-    "    clf.fit(X[:n],y[:n])\n",
-    "    y_pred = clf.predict(X[:n])\n",
-    "    y_pred_t = clf.predict(X_t[:k])\n",
-    "    accuracy.append(np.sum(y_pred_t[:k] == y_t[:k]) / k)"
+    "feed_dict = {x: data_points[:,0:2], y: data_points[:,2]}\n",
+    "session = tf.Session()\n",
+    "session.run(tf.global_variables_initializer())\n",
+    "current_loss = session.run(loss, feed_dict)\n",
+    "print(current_loss)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(accuracy, lw = 5)\n",
-    "plt.xlabel('m', fontsize=20)\n",
-    "plt.ylabel('Accuracy', fontsize=20)\n",
-    "plt.show()"
+    "def train(target_loss, max_steps, loss_tensor, train_step_op, inputs):\n",
+    "    step = 0\n",
+    "    current_loss = session.run(loss_tensor, inputs)\n",
+    "    while current_loss > target_loss and step < max_steps:\n",
+    "        step += 1\n",
+    "        if math.log(step, 2).is_integer():\n",
+    "            print(f'step: {step}, current loss: {current_loss}')\n",
+    "        session.run(train_step_op, inputs)\n",
+    "        current_loss = session.run(loss_tensor, inputs)\n",
+    "    print(f'ENDED ON STEP: {step}, FINAL LOSS: {current_loss}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Counting the distribution of regression, and log errors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distributions = []\n",
-    "losses = []\n",
-    "start = 24\n",
-    "stop = 100\n",
-    "volume = 200\n",
-    "for n in range(start, volume-1):\n",
-    "    dis, loss = get_param_distr(X[:n],y[:n],n-n//4,count = 300)\n",
-    "    distributions.append(dis)\n",
-    "    losses.append(loss)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Ploting of losses at different sample size"
+    "SGD"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step: 1, current loss: 3868.2291666666665\n",
+      "step: 2, current loss: 1381.5379689135807\n",
+      "step: 4, current loss: 224.7373049641391\n",
+      "step: 8, current loss: 39.36606191164495\n",
+      "step: 16, current loss: 21.251396378934388\n",
+      "step: 32, current loss: 8.262024313710544\n",
+      "step: 64, current loss: 1.5494658076417605\n",
+      "step: 128, current loss: 0.07505392682364925\n",
+      "step: 256, current loss: 0.00022995372615102207\n",
+      "step: 512, current loss: 2.3476189945407435e-09\n",
+      "ENDED ON STEP: 582, FINAL LOSS: 9.698531013308539e-11\n",
+      "PARAMETERS: [2.50000205 2.49999959]\n"
+     ]
+    }
+   ],
    "source": [
-    "mlist = [(len(distributions)//4)*i for i in range(1,5)]\n",
-    "k = 0\n",
-    "fig, axs = plt.subplots(2, 2)\n",
-    "fig.subplots_adjust(left=0,right =5,bottom = 0, top=5)\n",
-    "\n",
-    "for m in mlist:\n",
-    "    dev=[]\n",
-    "    ax = axs[k//2, k%2]\n",
-    "    euclid = []\n",
-    "    k = k+1\n",
-    "    ax.set_autoscale_on(True)\n",
-    "    ax.set_ylabel('NLLLoss',fontdict=font)\n",
-    "    ax.set_xlabel('m',fontdict=font)\n",
-    "    ax.plot(losses[:m],lw=12, color='blue')  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ploating the Euclidean distance of means depending on the sample size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k = 0\n",
-    "fig, axs = plt.subplots(2, 2)\n",
-    "fig.subplots_adjust(left=0,right =5,bottom = 0, top=5)\n",
-    "\n",
-    "for m in mlist:\n",
-    "    dev=[]\n",
-    "    ax = axs[k//2, k%2]\n",
-    "    euclid = []\n",
-    "    for i in range(0,m,2):\n",
-    "        w1 = np.mean(distributions[i],0)\n",
-    "        w2 = np.mean(distributions[i+1],0)\n",
-    "        euclid.append(np.linalg.norm(w1-w2))\n",
-    "    k = k+1\n",
-    "    ax.set_autoscale_on(True)\n",
-    "    ax.set_ylabel('Distance',fontdict=font)\n",
-    "    ax.set_xlabel('m',fontdict=font)\n",
-    "    ax.plot(euclid[:m],lw=12, color='blue')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.show()"
+    "grad = tf.gradients(loss, p)[0]\n",
+    "learning_rate = 0.0005\n",
+    "opt = tf.train.GradientDescentOptimizer(learning_rate=1)\n",
+    "sgd = opt.apply_gradients([(learning_rate*grad, p)])\n",
+    "session.run(tf.global_variables_initializer())\n",
+    "train(1e-10, 40000, loss, sgd, feed_dict)\n",
+    "print('PARAMETERS:', session.run(p))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trace of coveration matrix depend on sample size"
+    "Adam"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step: 1, current loss: 3868.2291666666665\n",
+      "step: 2, current loss: 34205.72916492337\n",
+      "step: 4, current loss: 30529.109726416245\n",
+      "step: 8, current loss: 6066.123962286118\n",
+      "step: 16, current loss: 30745.555871420638\n",
+      "step: 32, current loss: 489.359011928145\n",
+      "step: 64, current loss: 114.83695692773432\n",
+      "step: 128, current loss: 0.1833651319270783\n",
+      "step: 256, current loss: 4.580126253823154e-07\n",
+      "ENDED ON STEP: 317, FINAL LOSS: 2.424142717541396e-12\n",
+      "PARAMETERS: [2.49999969 2.50000008]\n"
+     ]
+    }
+   ],
    "source": [
-    "k = 0\n",
-    "fig, axs = plt.subplots(2, 2)\n",
-    "fig.subplots_adjust(left=0,right =5,bottom = 0, top=5)\n",
-    "\n",
-    "for m in mlist:\n",
-    "    dev=[]\n",
-    "    ax = axs[k//2, k%2]\n",
-    "    for i in range(0,m):\n",
-    "        dev.append(np.trace(np.cov(distributions[i],rowvar=0)))\n",
-    "    k = k+1\n",
-    "    ax.set_autoscale_on(True)\n",
-    "    ax.set_ylabel('Trace',fontdict=font)\n",
-    "    ax.set_xlabel('m',fontdict=font)\n",
-    "    ax.plot(dev[:m],lw=12, color='blue') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.show()"
+    "adm = tf.train.AdamOptimizer(15).minimize(loss)\n",
+    "session.run(tf.global_variables_initializer())\n",
+    "train(1e-10, 40000, loss, adm, feed_dict)\n",
+    "print('PARAMETERS:', session.run(p))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ploating the KL divergention depend on sample size"
+    "Newton's method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step: 1, current loss: 3868.2291666666665\n",
+      "step: 2, current loss: 105.04357496954214\n",
+      "step: 4, current loss: 0.3307135454853347\n",
+      "ENDED ON STEP: 6, FINAL LOSS: 5.882202372519996e-20\n",
+      "PARAMETERS: [2.5 2.5]\n"
+     ]
+    }
+   ],
    "source": [
-    "k = 0\n",
-    "fig, axs = plt.subplots(2, 2)\n",
-    "fig.subplots_adjust(left=0,right =5,bottom = 0, top=5)\n",
-    "\n",
-    "for m in mlist:\n",
-    "    divergence=[]\n",
-    "    ax = axs[k//2, k%2]\n",
-    "    for i in range(0,m):\n",
-    "        divergence.append(KL_div_norm(distributions[i],distributions[m]))\n",
-    "    k = k+1\n",
-    "    ax.set_autoscale_on(True)\n",
-    "    ax.set_ylabel('Divergence',fontdict=font)\n",
-    "    ax.set_xlabel('m',fontdict=font)\n",
-    "    ax.plot(divergence[:m],lw=12, color='blue')  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ploating the projection of the vector parameters in two-dimensional space depending on the size of the sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k = 0\n",
-    "fig, axs = plt.subplots(2, 2,sharex=True,sharey=True)\n",
-    "fig.subplots_adjust(left=0,right =5,bottom = 0, top=5)\n",
-    "for i in range(0,187,50):\n",
-    "    fig.suptitle(''+str(i), fontsize=20)\n",
-    "    ax = axs[k//2, k%2]\n",
-    "    k = k+1\n",
-    "    ax.set_autoscale_on(True)\n",
-    "    ax.set_title(\"m=\"+str(i))\n",
-    "    ax.set_ylabel('y',fontdict=font)\n",
-    "    ax.set_xlabel('x',fontdict=font)\n",
-    "    ax.scatter(distributions[i][:,2],distributions[i][:,0],500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ploating the histogram of distribution"
+    "hess = tf.hessians(loss, p)[0]\n",
+    "grad_col = tf.expand_dims(grad, -1)\n",
+    "dp = tf.matmul(tf.linalg.inv(hess), grad_col)\n",
+    "dp = tf.squeeze(dp)\n",
+    "newton = opt.apply_gradients([(dp, p)])\n",
+    "session.run(tf.global_variables_initializer())\n",
+    "train(1e-10, 40000, loss, newton, feed_dict)\n",
+    "print('PARAMETERS:', session.run(p))"
    ]
   },
   {
@@ -394,124 +211,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "plt.hist(distributions[70][:,1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ploating the projection of the mean vectors of optimal parameters depending on the sample size on which the regression was studied"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "means = []\n",
-    "for i in range(0,volume-start-3,1):\n",
-    "    means.append(np.mean(distributions[i],axis=0))\n",
-    "means = np.asarray(means)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k = 0\n",
-    "fig, axs = plt.subplots(2, 2)\n",
-    "fig.subplots_adjust(left=0,right =5,bottom = 0, top=5)\n",
-    "\n",
-    "for m in mlist:\n",
-    "    ax = axs[k//2, k%2]\n",
-    "    k = k+1\n",
-    "    ax.set_autoscale_on(True)\n",
-    "    ax.set_ylabel('y',fontdict=font)\n",
-    "    ax.set_xlabel('x',fontdict=font)\n",
-    "    ax.scatter(means[:,(k*k+2)%4],means[:,(k+4)%5],300,c = -np.asarray([i for i in range(means.shape[0])]),linewidth=14)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "------------------------------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X=[]\n",
-    "for i in range(2):\n",
-    "    max_size = 2*1000\n",
-    "    m_1 = [0,-2]\n",
-    "    m_2 = [0,-2]\n",
-    "    random_state = 1\n",
-    "    a = np.random.multivariate_normal(m_1,np.asarray([[1,0.5],[0.5,1]]), max_size)\n",
-    "    b = np.random.multivariate_normal(m_2,np.asarray([[1,-0.5],[-0.5,1]]), max_size)\n",
-    "    X1 = []\n",
-    "    Y1 = []\n",
-    "    data = np.hstack([a,b]).reshape(-1,2)\n",
-    "    for i in data:\n",
-    "        X1.append(i)\n",
-    "        Y1.append(int(i in a))\n",
-    "    X1 = np.asarray(X1)\n",
-    "    Y1 = np.asarray(Y1)\n",
-    "    X.append(np.hstack([X1, Y1.reshape(-1,1)]))\n",
-    "Xtrain =X[0]\n",
-    "Xtest = X[1]\n",
-    "X = Xtrain[:,:-1]\n",
-    "y = Xtrain[:,-1]\n",
-    "X_t = Xtest[:,:-1]\n",
-    "y_t = Xtest[:,-1]\n",
-    "plt.scatter(a[:,0],a[:,1])\n",
-    "plt.scatter(b[:,0],b[:,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.optimize import curve_fit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "curve_fit(inv_pow, x, divergence[1:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = [i+1 for i in range(len(divergence)-1)]\n",
-    "plt.plot(divergence)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -530,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
